--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
-
+---
+before_install:
+- "npm i -g npm@version-number"
+install: "npm install"
 language: node_js
-node_js:
+node_js: "~ node"
+script: "npm test"
+sudo: false
