--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,55 @@
+# Set up notification options
+notifications: 
+  email:
+    recipients:
+      - one@example.com
+      - other@example.com
+
+    # change is when the repo status goes from pass to fail or vice versa
+    on_success: change
+    on_failure: always
+
+# specify language
 language: node_js
+
+# specify language options
 node_js:
-- '4'
+- '0.10'
+- '0.11'
+
+# configure which branches to run
+branches:
+  # whitelist
+  only:
+    - master
+    - /^deploy-.*$/ # regex ok
+  # blacklist
+  except:
+    - dontrunme 
+    - test 
+
+# declare your environment variables
+env:
+  # global will stay the same across all matrix possibilities (will not create additional combinations to run)
+  global:
+    - SECRET_TOKEN=k399dkkgklsk
+  # matrix variables will create a new build for each specified variable
+  matrix:
+    - DB=production
+    - DB=testing
+
+# enable services (stuff like DBs, MQs)
+services:
+  - mongodb     # will start mongodb
+  - rabbitmq # will start rabbitmq-server
+
+## begin build steps
+####################
+
+before_install:
+- sudo apt-get update -qq
+
+install:
+  - wget https://github.com/n1k0/casperjs/archive/1.0.2.tar.gz -O /tmp/casper.tar.gz
+  - tar -xvf /tmp/casper.tar.gz
+  - export PATH=$PATH:$PWD/casperjs-1.0.2/bin/
