--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,14 @@
+--- 
+after_script: "make clean"
+before_script: 
+  - "make pretest1"
+  - "make pretest2"
+branches: 
+  except: 
+    - ".."
+  only: 
+    - master
 language: node_js
-node_js:
-- '4'
+node_js: 
+  - "4"
+script: "make test"
